<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CursoAndroidLauraActivity!</string>
    <string name="app_name">CursoAndroidLaura</string>
    <string name="primero">Primero!</string>
    <string name="segundo">Segundo!</string>
    <string name="tercero">Tercero!</string>
    <string name="ultimo">Último!</string>
    <string name="autodes">Autodestrucción en 5sg</string>
    <string name="bien">Todo está bien</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="borrar">Borrar</string>
    <string name="titulo">Formulario de inscripción</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="ciudad">Ciudad</string>
    <string name="info">Información</string>

</resources>