<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    
    <TextView
        android:id="@+id/text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"/>
    
   <LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:id="@+id/texto1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/nombre" />

       <EditText
           android:id="@+id/input1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.87" />

   </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/texto2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apellidos" />

        <EditText
            android:id="@+id/input2"
            android:layout_width="odp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/texto3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/ciudad" />

	    <EditText
	        android:id="@+id/input3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	</LinearLayout>

   <LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <Button
           android:id="@+id/bot1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.14"
           android:gravity="center"
           android:onClick="clickCancelar"
           android:text="@string/cancelar"
           android:textColor="@color/rojo"
           android:textSize="10sp" >

       </Button>

       <Button
           android:id="@+id/bot1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.16"
           android:gravity="center"
           android:onClick="clickEnv"
           android:text="@string/enviar"
           android:textColor="@color/rojo"
           android:textSize="10sp" />

   </LinearLayout>
    
</LinearLayout>